# rag-lab

./: .gitignore  CLAUDE.md  README.md  document_registry_v3.db  fingerprints_v3.db  jobs_v3.db  keyword_index_v3.db  processing_report.json  processing_report_v3.json  pyproject.toml  test_full_pipeline.py  test_results.json  test_with_real_api.py
cache_v3/: 0143c94a_datashee.json.lz4  2b01cab1_datashee.json.lz4  3298c260_generic_.json.lz4  4b36074e_datashee.json.lz4  906b8e7c_datashee.json.lz4  95197d94_datashee.json.lz4  a835a5a7_datashee.json.lz4  b11ce9db_datashee.json.lz4  b168f9d7_datashee.json.lz4  f7448efb_datashee.json.lz4
qdrant_data_v3/: meta.json
src/chat/: chat_engine.py
src/db/: create_vector_db.py
src/notebooks/: llamaparse_openai4_1.ipynb
src/parsing/: datasheet_ingest_overview.md  datasheet_ingest_pipeline.py  merge_pickles.py  metadata.py  parse.py  parse_pdf_md.py
src/pipeline_v3/: CLAUDE.md  DEVELOPMENT_STATUS.md  PHASE3_PLAN.md  QUICK_REFERENCE.md  README.md  USER_MANUAL.md  __init__.py  cli_main.py  cli_v3.py  config.yaml  (+18 more)
storage_data/: labmax-touch-ds_4b36074e_a835a5a7.jsonl
storage_data_v3/: 05e826c2-f9e1-4cf6-b7fe-7115c61e318b.jsonl  2513cd15-6262-43cd-98d5-51098022c53c.jsonl  55c4fc4f-1523-4673-9c6e-9748ee334c27.jsonl  5ceb0c0a-eb6e-4a9a-bfbd-176d130debf8.jsonl  692f3a4d-d82f-43fc-9034-06e8f99fe937.jsonl  69a2d72e-30f9-48b1-9e3b-01aabc23455b.jsonl  76e63650-75e3-4903-a210-d80936ccb41b.jsonl  ad77c8b0-be68-4288-be07-e61038be6df2.jsonl  f0074b21-4058-4364-9305-84a3d664f566.jsonl  f8890e70-aa17-49f2-8051-330288efc3a5.jsonl
(+87 files in other folders)
