[project]
name = "rag-lab"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.7",
    "llama-index>=0.12.40",
    "llama-index-embeddings-openai>=0.3.1",
    "llama-index-vector-stores-qdrant>=0.6.0",
    "matplotlib>=3.10.3",
    "pdf2image>=1.17.0",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
]
